Updated Glassdoor Review Analysis project and dashboard

--- a/index.html
+++ b/index.html
@@ -522,6 +522,28 @@ plt.show()
                         </a>
                     </div>
                 </div>
+
+                <div class="viz-card">
+                    <div class="viz-header">
+                        <div class="viz-icon">
+                            <i class="fas fa-chart-pie"></i>
+                        </div>
+                        <h3>Glassdoor Companies Review Analysis</h3>
+                    </div>
+                    <div class="viz-content">
+                        <p>Interactive Power BI dashboard exploring employee satisfaction, retention, and company benchmarks from 6,971 reviews across 127 US companies.</p>
+                        <div class="viz-tech">
+                            <span>Power BI</span>
+                            <span>HR Analytics</span>
+                        </div>
+                    </div>
+                    <div class="viz-actions">
+                        <a href="https://app.powerbi.com/view?r=eyJrIjoiODdiNzRlMjktNTc3ZS00NjkyLTk1MzYtZjU0NmQyYzJhZjcwIiwidCI6IjdhZmI5ZTIyLTkzMDgtNDE4Ni04ZTI5LWVhMjMxZmYzYmFmNyIsImMiOjN9" class="btn btn-sm" target="_blank">
+                            <i class="fas fa-external-link-alt"></i>
+                            <span>View Dashboard</span>
+                        </a>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
