Updated profile picture and new resume

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                         <span>Hire Me</span>
                         <i class="fas fa-envelope"></i>
                     </a>
-                    <a href="DA Venkata sai teja.pdf" class="btn btn-outline" target="_blank">
+                    <a href="Latex Resume.pdf" class="btn btn-outline" target="_blank">
                         <span>Download Resume</span>
                         <i class="fas fa-download"></i>
                     </a>
@@ -260,11 +260,10 @@ plt.show()
                 </div>
                 <div class="about-visual">
                     <div class="about-image">
-                        <div class="image-container">
-                            <div class="image-placeholder">
-                                <i class="fas fa-user-tie"></i>
-                            </div>
+                        <div class="image-container image-tilt" id="profile-tilt">
+                            <img src="Profile photo no bg.png" alt="Venkata Sai Teja Mothukuri" class="profile-image">
                             <div class="image-overlay"></div>
+                            <div class="tilt-glare"></div>
                         </div>
                         <div class="floating-card card-1">
                             <i class="fas fa-database"></i>
